fix account details property not showing up
- If a widget was hidden the first time then
it would never be visible again

- Also fix minor css error

Tuleap: #549

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -472,7 +472,7 @@ QSpinBox::up-button{
 QLineEdit#lrcfg_alias, QLineEdit#lrcfg_hostname, QLineEdit#lrcfg_password, QLineEdit#lrcfg_proxy,
 QLineEdit#lrcfg_mailbox, QLineEdit#lrcfg_tlsPassword, QLineEdit#lrcfg_tlsServerName,
 QLineEdit#lrcfg_turnServerRealm, QLineEdit#lrcfg_turnServerUsername, QLineEdit#lrcfg_turnServerPassword,
-QLineEdit#lrcfg_turnServer, QLineEdit#lrcfg_publishedAddress{
+QLineEdit#lrcfg_turnServer, QLineEdit#lrcfg_publishedAddress, QLineEdit#lrcfg_username{
     background: transparent;
     border-radius: 0px;
     border-style: solid;
@@ -485,7 +485,7 @@ QLineEdit#lrcfg_turnServer, QLineEdit#lrcfg_publishedAddress{
     padding: 2px;
 }
 
-QLabel#typeValueLabel, QLineEdit#lrcfg_username{
+QLabel#typeValueLabel{
     background: transparent;
     font: 11pt "Sans Serif";
     border-radius: 0px;
@@ -495,7 +495,8 @@ QLabel#typeValueLabel, QLineEdit#lrcfg_username{
 QLineEdit#lrcfg_alias:focus, QLineEdit#lrcfg_hostname:focus, QLineEdit#lrcfg_password:focus,
 QLineEdit#lrcfg_proxy:focus, QLineEdit#lrcfg_mailbox:focus, QLineEdit#lrcfg_tlsPassword:focus,
 QLineEdit#lrcfg_tlsServerName:focus, QLineEdit#lrcfg_turnServerRealm:focus, QLineEdit#lrcfg_turnServerUsername:focus,
-QLineEdit#lrcfg_turnServerPassword:focus, QLineEdit#lrcfg_turnServer:focus, QLineEdit#lrcfg_publishedAddress:focus{
+QLineEdit#lrcfg_turnServerPassword:focus, QLineEdit#lrcfg_turnServer:focus, QLineEdit#lrcfg_publishedAddress:focus,
+QLineEdit#lrcfg_username:focus{
     border-color: #3AC0D2;
 }
 
